--- a/packages/tools/sugar/src/scss/_classes.scss
+++ b/packages/tools/sugar/src/scss/_classes.scss
@@ -8,7 +8,7 @@
   @include helper-flex-classes();
   @include helper-link-classes();
   @include helper-margin-classes();
-  @include helper-media-classes();
+  @include helper-media-object-classes();
   @include helper-overflow-classes();
   @include helper-padding-classes();
   @include helper-pointer-classes();
