--- a/packages/tools/sugar/src/scss/helper/class/_all.scss
+++ b/packages/tools/sugar/src/scss/helper/class/_all.scss
@@ -6,7 +6,7 @@
 @import 'flex';
 @import 'link';
 @import 'margin';
-@import 'media';
+@import 'media-object';
 @import 'overflow';
 @import 'padding';
 @import 'pointer';
