--- a/packages/tools/sugar/src/scss/font/function/_font-size.scss
+++ b/packages/tools/sugar/src/scss/font/function/_font-size.scss
@@ -1,7 +1,15 @@
 // @TODO    documentation
 @function font-size($size) {
-  @if type-of($size) == string {
-    @return interpolate(setting('typography.font-size'), $size);
+  $fontSizes: setting('fonts.sizes');
+  @if type-of($size) == number {
+    $name: '#{$size}';
+    @if map-has-key($fontSizes, $name) {
+      @return map-get($fontSizes, $name);
+    }
+  } @else if type-of($size) == string {
+    @if map-has-key($fontSizes, $size) {
+      @return map-get($fontSizes, $size);
+    }
   }
   @return $size;
 }
