--- a/packages/tools/sugar/src/scss/helper/class/_media-object.scss
+++ b/packages/tools/sugar/src/scss/helper/class/_media-object.scss
@@ -5,21 +5,21 @@
  *
  * This mixin generate all the "media object" related helper classes.
  *
- * @classname     #{sel(mo)}       Famous media object class
- * @classname     #{sel(mo--center)}       Media object centered
- * @classname     #{sel(mo--end)}       Media object end
- * @classname     #{sel(mo__content)}       Media object content
+ * @classname     #{sel(media-object)}       Famous media object class
+ * @classname     #{sel(media-object--center)}       Media object centered
+ * @classname     #{sel(media-object--end)}       Media object end
+ * @classname     #{sel(media-object__content)}       Media object content
  *
  * @example         scss
- * @include Sugar.helper-media-classes();
+ * @include Sugar.helper-media-object-classes();
  *
  * @since         2.0.0
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
  */
-@mixin helper-media-classes() {
+@mixin helper-media-object-classes() {
   @if class-match-namespace('sugar.helper.media.object') {
     /**
-    * @name 		#{sel(mo)} #{sel(mo--center)} #{sel(mo__content)}
+    * @name 		#{sel(media-object)} #{sel(media-object--center)} #{sel(media-object__content)}
     * @namespace         sugar.scss.helper.class
     * @class-namespace     sugar.helper.media.object
     * @type        class
@@ -27,11 +27,11 @@
     * Famous media object class
     *
     * @example 	html
-    * <div class="#{sel(mo)}">
-    *   <div class="#{sel(mo__content)}">
+    * <div class="#{sel(media-object)}">
+    *   <div class="#{sel(media-object__content)}">
     *     <img src="https://source.unsplash.com/random/100x100" />
     *   </div>
-    *   <div class="#{sel(mo__content)}">
+    *   <div class="#{sel(media-object__content)}">
     *     <h2 class="#{sel(h3)}">Hello World</h2>
     *     <p class="#{sel(p)}">Phasellus fringilla aliquet justo eget pulvinar. Donec in justo leo.</p>
     *   </div>
@@ -40,18 +40,18 @@
     * @since       1.0.0
     * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
     */
-    .#{sel(mo)} {
+    .#{sel(media-object)} {
       display: flex;
       flex-wrap: nowrap;
 
       @at-root {
-        .#{sel(mo--center)} {
+        .#{sel(media-object--center)} {
           align-items: center;
         }
-        .#{sel(mo--end)} {
+        .#{sel(media-object--end)} {
           align-items: flex-end;
         }
-        .#{sel(mo__content)} {
+        .#{sel(media-object__content)} {
           flex: 0 1 auto;
         }
       }
