--- a/packages/tools/sugar/src/scss/helper/class/_ratio.scss
+++ b/packages/tools/sugar/src/scss/helper/class/_ratio.scss
@@ -5,13 +5,7 @@
  *
  * This mixin generate all the "ratio" related helper classes.
  *
- * @classname     #{sel(ratio-21-9)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 21 * 9
- * @classname     #{sel(ratio-9-21)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
- * @classname     #{sel(ratio-16-9)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
- * @classname     #{sel(ratio-9-16)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
- * @classname     #{sel(ratio-4-3)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 4 * 3
- * @classname     #{sel(ratio-3-4)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 3 * 4
- * @classname     #{sel(ratio-1-1)}      Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100%
+ * @classname     #{sel(ratio-{ratio})}      Apply a ratio on a particular element
  *
  * @example         scss
  * @include Sugar.helper-ratio-classes();
@@ -20,140 +14,40 @@
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
  */
 @mixin helper-ratio-classes() {
-  @if class-match-namespace('sugar.helper.ratio.21-9') {
-    /**
-    * @name 		#{sel(ratio-21-9)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.21-9
-    * @type        Classname
-    *
-    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 21 * 9
-    *
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-21-9)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-21-9)} {
-      @include ratio(21/9);
-    }
-  }
-  @if class-match-namespace('sugar.helper.ratio.9-21') {
-    /**
-    * @name 		#{sel(ratio-9-21)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.9-21
-    * @type        Classname
-    *
-    * Keep a 9/21 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 21
-    *    
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-9-21)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-9-21)} {
-      @include ratio(9/21);
-    }
-  }
+  $ratios: setting('ratios');
+  @each $name in $ratios {
+    @if class-match-namespace('sugar.helper.ratio.#{$name}') {
+      $n: str-replace($name, '/', '-');
+      $splits: str-split($name, '/');
+      $ratio: 1;
+      @if list-length($splits) == 2 {
+        $width: to-number(list-nth($splits, 1));
+        $height: to-number(list-nth($splits, 2));
+        $ratio: $width / $height;
+      } @else if list-length($splits) == 1 {
+        $ratio: to-number(list-nth($splits, 1));
+      }
 
-  @if class-match-namespace('sugar.helper.ratio.16-9') {
-    /**
-    * @name 		#{sel(ratio-16-9)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.16-9
-    * @type        Classname
-    *
-    * Keep a 16/9 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 16 * 9
-    *    
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-16-9)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-16-9)} {
-      @include ratio(16/9);
-    }
-  }
-  @if class-match-namespace('sugar.helper.ratio.9-16') {
-    /**
-    * @name 		#{sel(ratio-9-16)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.9-16
-    * @type        Classname
-    *
-    * Keep a 9/16 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 9 * 16
-    *
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-9-16)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-9-16)} {
-      @include ratio(9/16);
-    }
-  }
-
-  @if class-match-namespace('sugar.helper.ratio.4-3') {
-    /**
-    * @name 		#{sel(ratio-4-3)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.4-3
-    * @type        Classname
-    *
-    * Keep a 4/3 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 4 * 3
-    *
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-4-3)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-4-3)} {
-      @include ratio(4/3);
-    }
-  }
-  @if class-match-namespace('sugar.helper.ratio.3-4') {
-    /**
-    * @name 		#{sel(ratio-3-4)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.3-4
-    * @type        Classname
-    *
-    * Keep a 3/4 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100% / 3 * 4
-    *
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-3-4)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-3-4)} {
-      @include ratio(4/3);
-    }
-  }
-
-  @if class-match-namespace('sugar.helper.ratio.1-1') {
-    /**
-    * @name 		#{sel(ratio-1-1)}
-    * @namespace         sugar.scss.helper.class
-    * @class-namespace     sugar.helper.ratio.1-1
-    * @type        class
-    *
-    * Keep a 1/1 ratio on a particular element. Applied by setting height to 0 and paddingtop to 100%
-    *
-    * @example 	html
-    * <div class="#{sel(bg-primary)} #{sel(ratio-1-1)}"></div>
-    *
-    * @since       1.0.0
-    * @author 	        Olivier Bossel <olivier.bossel@gmail.com>   (https://olivierbossel.com)
-    */
-    .#{sel(ratio-1-1)} {
-      @include ratio(1);
+      $cname: selector('ratio-#{$n}');
+      /**
+        * @name       	#{$cname}
+        * @namespace       sugar.scss.helper.class
+        * @class-namespace           sugar.helper.ratio.#{$name}
+        * @type        Classname
+        *
+        * Set the **ratio** to the **#{$name}**
+        *
+        * @example 	html
+        * <div class="#{$cname}">
+        *   ...
+        * </div>
+        *
+        * @since       1.0.0
+        * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+        */
+      .#{$cname} {
+        @include ratio($ratio);
+      }
     }
   }
 }
