--- a/packages/tools/sugar/src/scss/screen-reader/mixin/_screen-reader-only.scss
+++ b/packages/tools/sugar/src/scss/screen-reader/mixin/_screen-reader-only.scss
@@ -1,5 +1,5 @@
 /**
- * @name            sr-only
+ * @name            screen-reader-only
  * @namespace       sugar.scss.screen-reader.mixin
  * @type            Mixin
  *
@@ -8,7 +8,7 @@
  * @since       2.0.0
  * @author 	        Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin sr-only() {
+@mixin screen-reader-only() {
   position: absolute;
   width: 1px;
   height: 1px;
