--- a/packages/tools/sugar-ui/src/css/06_organisms/_s-sugar-ui.scss
+++ b/packages/tools/sugar-ui/src/css/06_organisms/_s-sugar-ui.scss
@@ -1,5 +1,5 @@
-@import '@coffeekraken/s-filtrable-input/index';
-@include SFiltrableInputStyle();
+@use '@coffeekraken/s-filtrable-input/index' as SFiltrableInput;
+// @include SFiltrableInputStyle();
 
 $primaryColor: #15191b;
 $secondaryColor: #2b3438;
