--- a/packages/tools/sugar/src/node/docblock/renderers/html/templates/class.hbs
+++ b/packages/tools/sugar/src/node/docblock/renderers/html/templates/class.hbs
@@ -1,4 +1,4 @@
-<div class="s-db-output s-db-output--html">
+<div class="{{ classname 's-db-output s-db-output--html' }}">
   {{include "class"}}
 
   <h2 class="s-db-h2">
