--- a/packages/tools/sugar/src/node/docblock/renderers/html/partials/sharings.hbs
+++ b/packages/tools/sugar/src/node/docblock/renderers/html/partials/sharings.hbs
@@ -1,5 +1,5 @@
-<div class="s-db-sharings s-m-b">
-  <a href="https://olivierbossel.com" class="s-btn s-btn--small">
+<div class="{{ classname 'db-sharings m-b' }}">
+  <a href="https://olivierbossel.com" class="{{ classname 'btn s-btn--small' }}">
     Share this page
   </a>
 </div>
